--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,52 @@
 body {
     margin: 0;
     background: rgb(213,213,213);
-    background: linear-gradient(360deg, rgba(213,213,213,1) 0%, rgba(235,240,246,1) 100%);
+    background: linear-gradient(360deg, rgb(198, 198, 202) 0%, rgba(235,240,246,1) 100%);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    min-height: 100%
-    
+    min-height: 100%;
+    width: 100%;
 }
 
 html {
     height: 100%;
+    width: 100%;
+    margin: 0;
 }
 
 header {
     background-color: rgb(31, 28, 28);
     background: linear-gradient(180deg, rgba(46,41,41,1) 0%, rgb(36, 34, 34) 100%);
-    box-shadow: 50px;
+    border-right: 8px solid rgba(0, 0, 0, 10%);
     min-height: 100%;
-    width: 300px;
+    width: 220px;
     padding: 20px;
     color: white;
 }
 h1 {
-    margin-top: 10px;
+    margin-top: 16px;
     margin-bottom: 5px;
+    font-weight: 700;
 }
 h3 {
     font-size: 16px;
-    font-weight: 100;
+    font-weight: 600;
+    margin-bottom: 50px;
 }
 .button-box {
-    margin-top: 40px;
     display: flex;
     flex-direction: column;
 }
 header button {
-    height: 50px;
+    height: 45px;
+    width: 100%;
     border: none;
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 4px;
     color: white;
-    font-size: 20px;
+    font-size: 17px;
+    font-weight: 600;
     text-align: start;
     background-color: rgb(35, 33, 33)
 
@@ -49,5 +54,80 @@ header button {
 header button:hover {
     background-color: rgb(27, 25, 25);
     transition-duration: 0.2s;
+}
 
+main {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 20px;
+}
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h2 {
+    color: rgb(38, 41, 46);
+}
+.container {
+    background-color: white;
+    border-radius: 9px;
+    padding-bottom: 7px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.column {
+    display: grid;
+    height: 56px;
+    grid-template-columns: 3fr 2fr 2fr 2fr;
+    border-bottom: 2px solid rgba(0, 0, 0, 20%);
+}
+.columnTitle {
+    background-color: rgba(224, 224, 224, 0.979);
+    border-radius: 9px 9px 0px 0px;
+    height: 40px;
+}
+.columnTitle h4 {
+    color: rgb(101, 101, 102);
+    margin: 0;
+    margin-left: 30px;
+    align-self: center;
+}
+.clientNew .container {
+    width: 60%;
+    padding: 25px;
+}
+form {
+    display: flex;
+    flex-direction: column;
+}
+label {
+    font-weight: 600;
+    font-size: 18px;
+    color: rgb(51, 54, 56);
+}
+input {
+    margin-top: 4px;
+    margin-bottom: 15px;
+    height: 23px;
+    border: 1px solid rgba(0, 0, 0, 0.219);
+}
+input:focus {
+    outline: none;
+}
+.submit {
+    color: white;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    font-weight: 900;
+    background-color: rgb(132, 0, 255);
+}
+
+.hide {
+    display: none;
 }
